# spice_selection_gui

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
resource/: SpiceSelectionPlugin.ui
scripts/: spice_selection_gui
src/spice_selection_gui/: spice_select.py
srv/: LocalizeColorMask.srv
